@@ -383,6 +383,11 @@ void load_game_configs()
 	// And this one fixes patches unloading on some MIDI setups
 	midi_patch_fix = (byte) get_config_int("zeldadx","midi_patch_fix",0);
 	monochrome_console = (byte) get_config_int("CONSOLE","monochrome_debuggers",0);
+#else //UNIX
+    use_debug_console = (byte) get_config_int(cfg_sect,"debug_console",0);
+    zasm_debugger = (byte) get_config_int("CONSOLE","print_ZASM",0);
+    zscript_debugger = (byte) get_config_int("CONSOLE","ZScript_Debugger",0);
+    monochrome_console = (byte) get_config_int("CONSOLE","monochrome_debuggers",0);
 #endif
     
 #ifdef ALLEGRO_MACOSX
